<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
>
	<Button
		android:id="@+id/btnSelectLocation"
		android:text="@string/btnSelectLocation"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	<Button
		android:id="@+id/btnViewRoute"
		android:text="@string/btnViewRoute"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	<Button
		android:id="@+id/btnMonthView"
		android:text="@string/btnMonthView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
	<Button
		android:id="@+id/btnDayView"
		android:text="@string/btnDayView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
</LinearLayout>